--- a/style.css
+++ b/style.css
@@ -308,3 +308,10 @@ ul {
      border-color: black;
      box-shadow: 10px 10px 10px #999;
 }
+
+.extras{
+     margin-right: 28%;
+     text-align: center;
+     font-family: cursive;
+   
+}
